added banner section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grape Funta</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- tailwind and daisy ui cdn link -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.1/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
-    
+    <header class="container mx-auto flex mt-7">
+        <div class="flex-1">
+            <div><img src="images/grape funta (2) 27.png" alt=""></div>
+            <div><img src="images/bar 1.png" alt=""></div>
+            <div class="flex">
+                <img src="images/Grape Gum3 2.png" alt="">
+                <img src="images/Grape7 10.png" alt="">
+                <img src="images/Open GrAPE2 1.png" alt="">
+            </div>
+        </div>
+        <div class="header-bg flex-1 ">
+            <div class="text-center text-white py-5">
+                <h1 class="text-[2.5rem] font-extrabold">GRAPE FUNTA</h1>
+                <p class="text-base font-normal">DELTA 9 CANNABIS GUMMIES</p>
+                <div class="rating">
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                </div>
+                <p>49 Reviews</p>
+
+            </div>
+            <hr class="w-[80%] mx-auto h-1">
+            <div class="pt-5">
+                <div class="flex gap-2 justify-center ">
+                    <div><img src="images/fp tile 1.png" alt=""></div>
+                    <div><img src="images/pineapple tile.png" alt=""></div>
+                    <div><img src="images/grape funta.png" alt=""></div>
+                    <div><img src="images/orange tile.png" alt=""></div>
+                    <div><img src="images/sour apple.png" alt=""></div>
+                    <div><img src="images/og.png" alt=""></div>
+                </div>
+                <div class="flex gap-2 justify-center">
+                    <div><img src="images/peach tile.png" alt=""></div>
+                    <div><img src="images/save.png" alt=""></div>
+                    <div><img src="images/xl.png" alt=""></div>
+                    <div><img src="images/peach tile.png" alt=""></div>
+                </div>
+            </div>
+            <div class="flex pt-8 pb-4 justify-center gap-7">
+                <div class="w-20 h-[80px] bg-blue-400 rounded-full text-center  text-white border-white border-4">
+                    <p class="py-4 text-sm">
+                        1 <br>pack
+                    </p>
+                </div>
+                <div class="w-20 h-[80px] bg-blue-400 rounded-full text-center  text-white border-white border-4">
+                    <p class="py-4 text-sm">
+                        2<br>pack
+                    </p>
+                </div>
+                <div class="w-20 h-[80px] bg-blue-400 rounded-full text-center  text-white border-white border-4">
+                    <p class="py-4 text-sm">
+                        3 <br>pack
+                    </p>
+                </div>
+            </div>
+            <div>
+                <p>Save <span>$5.00</span> (14%)</p>
+            </div>
+        </div>
+    </header>
+    <main>
+
+    </main>
 </body>
+
 </html>
