added some item

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header class="container mx-auto flex mt-7">
         <div class="flex-1">
             <div><img src="images/grape funta (2) 27.png" alt=""></div>
-            <div><img src="images/bar 1.png" alt=""></div>
-            <div class="flex">
+            <div class="w-40 h-12 mx-auto"><img src="images/bar 1.png" alt=""></div>
+            <div class="flex justify-around">
                 <img src="images/Grape Gum3 2.png" alt="">
                 <img src="images/Grape7 10.png" alt="">
                 <img src="images/Open GrAPE2 1.png" alt="">
@@ -70,13 +70,160 @@
                     </p>
                 </div>
             </div>
-            <div>
-                <p>Save <span>$5.00</span> (14%)</p>
+            <div class="text-center">
+                <p class="text-2xl text-white">Save <span class="text-[#FAFF00]">$5.00</span> (14%) <br> <del
+                        class="text-red-300">$34.00</del>
+                </p>
+                <p class="text-5xl text-[#FAFF00]">$29.99</p>
+                <button class="btn-info text-white p-2 rounded-3xl font-extrabold border-white border-4">ADD TO
+                    CART</button>
+            </div>
+            <hr class="w-[80%] mx-auto h-1 mt-7">
+            <div class="ml-16 mt-4">
+                <h2 class="text-2xl text-white font-bold">FLAVOR DESCRIPTION</h2>
+                <p class="text-white ">A perfectly accurate and recognizable grape soda flavor in every bite. You can
+                    find countless fan pages for Grape this grape soda, so it was a guarantee to include this in our
+                    Funta series. This is a strong night time aid, if you’re looking for a power sleep or an evening of
+                    enjoyable “nothing”, you will love this and keep coming back for more.
+                </p>
             </div>
         </div>
     </header>
-    <main>
+    <main class="container mx-auto">
+        <!-- main section banner -->
+        <div class="banner-bg mt-10">
+            <div class="flex justify-around py-10">
+                <div class="flex items-center">
+                    <img src="images/DELTA 9.png" alt="">
+                    <div class="text-white">
+                        <h4 class="text-2xl font-bold">Delta 9 amount</h4>
+                        <p>200mg</p>
+                    </div>
+                </div>
+                <div class="flex items-center">
+                    <img src="images/SIZE.png" alt="">
+                    <div class="text-white">
+                        <h4 class="text-2xl font-bold">Size</h4>
+                        <p>10 gummies per bag <br> 20 mg per gumm</p>
+                    </div>
+                </div>
+                <div class="flex items-center">
+                    <img src="images/QUALITY.png" alt="">
+                    <div class="text-white">
+                        <h4 class="text-2xl font-bold">Product quality</h4>
+                        <p>All products are multi-stage lab <br> tested before and after</p>
+                    </div>
+                </div>
+            </div>
+            <hr class="w-[80%] mx-auto h-1">
+            <div class="text-white pt-4 ml-12">
+                <h3 class="text-4xl font-extrabold pl-7">DELTA 9 THC GUMMIES</h3>
+                <p class="p-10  text-2xl">
 
+                    It’s finally here, through cutting edge technology we are able to provide true Delta-9 THC gummies.
+                    Like all of our incredible products these are federally legal as they are hemp derived. These
+                    dispensary grade THC gummies will provide you with an exceptionally pure and strong high. With 10
+                    gummies and 200 mg of D9 THC in each bag you’ll experience quality unmatched by the world’s top
+                    dispensaries. This Funta Series is a play on our favorite soda! Enjoy three incredible popular soda
+                    flavors that are identical to their sweet beverage counterparts, Orange, Strawberry, and Grape!time
+                    aid, if you’re looking for a power sleep or an evening of enjoyable “nothing”, you will love this
+                    and keep coming back for more.
+
+                </p>
+
+            </div>
+            <h3 class="text-4xl font-extrabold text-center text-white pb-10">GET HIGHER</h3>
+            <div class="grid grid-cols-4 gap-4 mx-10 pb-10">
+                <!-- 1st card -->
+                <div class="card bg-violet-600 text-white shadow-xl p-4">
+                    <div class=" flex justify-between">
+                      <h2 class="card-title">Delta-9</h2>
+                      <p>
+                        Indica
+                      </p>
+                      <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      </div>
+                    </div>
+                    <div class="text-center">
+                        <h4 class="text-2xl font-bold">CHEESEHEAD</h4>
+                        <P class="text-xl">DELTA 9-O THC SUPER BLUNT <br>3GRAMS</P>
+                    </div>
+                    <figure><img class="" src="images/images (1).jpg" alt="Shoes" /></figure>
+                  </div>
+                  <!-- second card -->
+                <div class="card bg-orange-600 text-white shadow-xl p-4">
+                    <div class=" flex justify-between">
+                      <h2 class="card-title">Delta-9</h2>
+                      <p>
+                        Indica
+                      </p>
+                      <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      </div>
+                    </div>
+                    <div class="text-center">
+                        <h4 class="text-2xl font-bold">GUSHERS</h4>
+                        <P class="text-xl">DELTA 9-O THC SUPER BLUNT <br>3GRAMS</P>
+                    </div>
+                    <figure><img class="" src="images/images.jpg" alt="Shoes" /></figure>
+                  </div>
+                  <!-- third card -->
+                <div class="card bg-violet-400 text-white shadow-xl p-4">
+                    <div class=" flex justify-between">
+                      <h2 class="card-title">Delta-9</h2>
+                      <p>
+                        Indica
+                      </p>
+                      <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      </div>
+                    </div>
+                    <div class="text-center">
+                        <h4 class="text-2xl font-bold">BUBBA KUSH</h4>
+                        <P class="text-xl">DELTA 9-O THC SUPER BLUNT <br>3GRAMS</P>
+                    </div>
+                    <figure><img class="" src="images/download (1).jpg" alt="Shoes" /></figure>
+                  </div>
+                  <!-- forth card -->
+                <div class="card bg-violet-800 text-white shadow-xl p-4">
+                    <div class=" flex justify-between">
+                      <h2 class="card-title">Delta-9</h2>
+                      <p>
+                        Indica
+                      </p>
+                      <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      </div>
+                    </div>
+                    <div class="text-center">
+                        <h4 class="text-2xl font-bold">BUBBA KUSH</h4>
+                        <P class="text-xl">DELTA 9-O THC SUPER BLUNT <br>3GRAMS</P>
+                    </div>
+                    <figure><img class="" src="images/images (2).jpg" alt="Shoes" /></figure>
+                  </div>
+            </div>
+        </div>
+        <!-- faq section -->
+        <div>
+            
+        </div>
     </main>
 </body>
 
