--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-    <header class="container mx-auto flex mt-7">
+    <header class="container mx-auto flex-row lg:flex mt-7">
         <div class="flex-1">
             <div><img src="images/grape funta (2) 27.png" alt=""></div>
             <div class="w-40 h-12 mx-auto"><img src="images/bar 1.png" alt=""></div>
             <div class="flex justify-around">
-                <img src="images/Grape Gum3 2.png" alt="">
-                <img src="images/Grape7 10.png" alt="">
-                <img src="images/Open GrAPE2 1.png" alt="">
+                <img class="h-[150px] w-[150px]" src="images/Grape Gum3 2.png" alt="">
+                <img class="h-[150px] w-[150px]" src="images/Grape7 10.png" alt="">
+                <img class="h-[150px] w-[150px]" src="images/Open GrAPE2 1.png" alt="">
             </div>
         </div>
         <div class="header-bg flex-1 ">
@@ -38,22 +38,21 @@
             </div>
             <hr class="w-[80%] mx-auto h-1">
             <div class="pt-5">
-                <div class="flex gap-2 justify-center ">
+                <div class="grid grid-cols-3 lg:grid-cols-6 gap-2 justify-items-center sm:p-8 ">
                     <div><img src="images/fp tile 1.png" alt=""></div>
                     <div><img src="images/pineapple tile.png" alt=""></div>
                     <div><img src="images/grape funta.png" alt=""></div>
                     <div><img src="images/orange tile.png" alt=""></div>
                     <div><img src="images/sour apple.png" alt=""></div>
                     <div><img src="images/og.png" alt=""></div>
-                </div>
-                <div class="flex gap-2 justify-center">
+                
                     <div><img src="images/peach tile.png" alt=""></div>
                     <div><img src="images/save.png" alt=""></div>
                     <div><img src="images/xl.png" alt=""></div>
                     <div><img src="images/peach tile.png" alt=""></div>
                 </div>
             </div>
-            <div class="flex pt-8 pb-4 justify-center gap-7">
+            <div class="flex pb-4 justify-center gap-7">
                 <div class="w-20 h-[80px] bg-blue-400 rounded-full text-center  text-white border-white border-4">
                     <p class="py-4 text-sm">
                         1 <br>pack
@@ -79,7 +78,7 @@
                     CART</button>
             </div>
             <hr class="w-[80%] mx-auto h-1 mt-7">
-            <div class="ml-16 mt-4">
+            <div class="ml-16 mt-4 pb-10">
                 <h2 class="text-2xl text-white font-bold">FLAVOR DESCRIPTION</h2>
                 <p class="text-white ">A perfectly accurate and recognizable grape soda flavor in every bite. You can
                     find countless fan pages for Grape this grape soda, so it was a guarantee to include this in our
@@ -91,23 +90,23 @@
     </header>
     <main class="container mx-auto">
         <!-- main section banner -->
-        <div class="banner-bg mt-10">
+        <div class="banner-bg lg:mt-10">
             <div class="flex justify-around py-10">
-                <div class="flex items-center">
+                <div class="lg:flex items-center">
                     <img src="images/DELTA 9.png" alt="">
                     <div class="text-white">
                         <h4 class="text-2xl font-bold">Delta 9 amount</h4>
                         <p>200mg</p>
                     </div>
                 </div>
-                <div class="flex items-center">
+                <div class="lg:flex items-center">
                     <img src="images/SIZE.png" alt="">
                     <div class="text-white">
                         <h4 class="text-2xl font-bold">Size</h4>
                         <p>10 gummies per bag <br> 20 mg per gumm</p>
                     </div>
                 </div>
-                <div class="flex items-center">
+                <div class="lg:flex items-center">
                     <img src="images/QUALITY.png" alt="">
                     <div class="text-white">
                         <h4 class="text-2xl font-bold">Product quality</h4>
@@ -133,10 +132,10 @@
 
             </div>
             <h3 class="text-4xl font-extrabold text-center text-white pb-10">GET HIGHER</h3>
-            <div class="grid grid-cols-4 gap-4 mx-10 pb-10">
+            <div class="grid-cols-2 grid lg:grid-cols-4 gap-4 mx-10 pb-10">
                 <!-- 1st card -->
                 <div class="card bg-violet-600 text-white shadow-xl p-4">
-                    <div class=" flex justify-between">
+                    <div class="flex justify-between">
                       <h2 class="card-title">Delta-9</h2>
                       <p>
                         Indica
@@ -283,7 +282,7 @@
           <a class="link link-hover">Press kit</a>
         </div> 
         <div>
-            <h4 class="text-5xl font-extrabold text-white">
+            <h4 class="text-3xl lg:text-5xl font-extrabold text-white">
                 GRAPE FUNTA
             </h4>
         </div>
